exports[`test renders correctly 1`] = `
<View
  style={
    Object {
      "height": 269,
      "opacity": 0,
    }
  }>
  <TouchableOpacity
    activeOpacity={0.9}
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "height": 244,
        },
      ]
    }>
    <Image
      onLoadEnd={[Function]}
      source={
        Object {
          "uri": "fake_avatar",
        }
      }
      style={
        Array [
          undefined,
          Object {
            "height": 244,
          },
        ]
      } />
    <View
      style={undefined} />
    <View
      style={undefined}>
      <View
        style={undefined}>
        <View
          style={undefined}>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={undefined}>
              Nice project
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={undefined} />
        </View>
        <View
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#AFA48C",
              },
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </View>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`test renders mobile icon for mobile projects 1`] = `
<View
  style={
    Object {
      "height": 269,
      "opacity": 0,
    }
  }>
  <TouchableOpacity
    activeOpacity={0.9}
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "height": 244,
        },
      ]
    }>
    <Image
      onLoadEnd={[Function]}
      source={
        Object {
          "uri": "fake_avatar",
        }
      }
      style={
        Array [
          undefined,
          Object {
            "height": 244,
          },
        ]
      } />
    <View
      style={undefined} />
    <View
      style={undefined}>
      <View
        style={undefined}>
        <Image
          resizeMode="cover"
          source={1}
          style={undefined} />
        <View
          style={undefined}>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={undefined}>
              Nice project
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={undefined} />
        </View>
        <View
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#AFA48C",
              },
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </View>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`test renders wallpaper if no avatar 1`] = `
<View
  style={
    Object {
      "height": 269,
      "opacity": 0,
    }
  }>
  <TouchableOpacity
    activeOpacity={0.9}
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "height": 244,
        },
      ]
    }>
    <Image
      onLoadEnd={[Function]}
      source={1}
      style={
        Array [
          undefined,
          undefined,
          Object {
            "height": 244,
          },
        ]
      } />
    <View
      style={undefined} />
    <View
      style={undefined}>
      <View
        style={undefined}>
        <View
          style={undefined}>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={undefined}>
              Nice project
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={undefined} />
        </View>
        <View
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "#AFA48C",
              },
            ]
          }>
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontFamily": "FontAwesome",
                  "fontSize": 12,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }>
            
          </Text>
        </View>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`test renders workflow rows for multi mobile projects 1`] = `
<View
  style={
    Object {
      "height": 269,
      "opacity": 0,
    }
  }>
  <TouchableOpacity
    activeOpacity={0.9}
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "height": 244,
        },
      ]
    }>
    <Image
      onLoadEnd={[Function]}
      source={
        Object {
          "uri": "fake_avatar",
        }
      }
      style={
        Array [
          undefined,
          Object {
            "height": 244,
          },
        ]
      } />
    <View
      style={undefined} />
    <View
      style={undefined}>
      <View
        style={undefined}>
        <Image
          resizeMode="cover"
          source={1}
          style={undefined} />
        <View
          style={undefined}>
          <View
            style={undefined}>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={undefined}>
              Nice project
            </Text>
          </View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={undefined} />
        </View>
        <View
          style={
            Array [
              undefined,
            ]
          } />
      </View>
      <View
        onLayout={[Function]}>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                undefined,
              ]
            } />
          <View
            style={
              Array [
                undefined,
                Object {
                  "backgroundColor": "#AFA48C",
                },
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontFamily": "FontAwesome",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }>
              
            </Text>
          </View>
        </TouchableOpacity>
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                undefined,
              ]
            } />
          <View
            style={
              Array [
                undefined,
                Object {
                  "backgroundColor": "#AFA48C",
                },
              ]
            }>
            <Text
              accessible={true}
              allowFontScaling={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontFamily": "FontAwesome",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }>
              
            </Text>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;
